# Xreal

./: README.md
code/: indent_code.sh
code/cgame/: cg_animation.c  cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_local.h  cg_localents.c  cg_lua.c  cg_main.c  cg_marks.c  cg_osd.c  (+15 more)
qrazor-fx3/: AUTHORS  FEATURES  Makefile  Makefile.am  README-Win32.txt  SConscript_qrazor-fx-client  SConscript_qrazor-fx-map  SConscript_qrazor-fx-server  SConscript_ref_gl  SConscript_xreal_cgame  SConscript_xreal_data  SConscript_xreal_game  SConscript_xreal_ui  SConstruct  TODO  bootstrap  configure.ac
qrazor-fx3/data/: Makefile.am
qrazor-fx3/data/xreal/: Makefile.am
qrazor-fx3/data/xreal/cg/: Makefile.am  buildshaders.sh  dispersion_C_arbfp1.cg  dispersion_C_arbfp1.s  dispersion_C_arbvp1.s  dispersion_C_fp30.cg  dispersion_C_fp30.s  generic_arbfp1.cg  generic_arbfp1.s  generic_arbvp1.cg  generic_arbvp1.s  generic_fp30.cg  generic_fp30.s  generic_vp30.cg  generic_vp30.s  lighting_DBHS_XY_Z_CUBE_arbfp1.cg  lighting_DBHS_XY_Z_CUBE_arbfp1.s  lighting_DBHS_XY_Z_CUBE_arbvp1.cg  lighting_DBHS_XY_Z_CUBE_arbvp1.s  lighting_DBHS_XY_Z_CUBE_fp30.cg  lighting_DBHS_XY_Z_CUBE_fp30.s  lighting_DBHS_XY_Z_CUBE_vp30.cg  lighting_DBHS_XY_Z_CUBE_vp30.s  lighting_DBH_XY_Z_CUBE_arbfp1.cg  lighting_DBH_XY_Z_CUBE_arbfp1.s  lighting_DBH_XY_Z_CUBE_arbvp1.cg  lighting_DBH_XY_Z_CUBE_arbvp1.s  lighting_DBH_XY_Z_CUBE_fp30.cg  lighting_DBH_XY_Z_CUBE_fp30.s  lighting_DBH_XY_Z_CUBE_vp30.cg  lighting_DBH_XY_Z_CUBE_vp30.s  lighting_DBS_XY_Z_CUBE_arbfp1.cg  lighting_DBS_XY_Z_CUBE_arbfp1.s  lighting_DBS_XY_Z_CUBE_arbvp1.cg  lighting_DBS_XY_Z_CUBE_arbvp1.s  lighting_DBS_XY_Z_CUBE_fp30.cg  lighting_DBS_XY_Z_CUBE_fp30.s  lighting_DBS_XY_Z_CUBE_vp30.cg  lighting_DBS_XY_Z_CUBE_vp30.s  lighting_DB_XY_Z_CUBE_arbfp1.cg  (+79 more)
qrazor-fx3/data/xreal/glsl/: Makefile.am  dispersion_C_fp.glsl  dispersion_C_vp.glsl  fog_uniform_fp.glsl  fog_uniform_vp.glsl  generic_fp.glsl  generic_vp.glsl  heathaze_fp.glsl  heathaze_vp.glsl  lighting_DBHS_omni_fp.glsl  lighting_DBHS_omni_vp.glsl  lighting_DBHS_vstatic_fp.glsl  lighting_DBHS_vstatic_vp.glsl  lighting_DBH_omni_fp.glsl  lighting_DBH_omni_vp.glsl  lighting_DBH_vstatic_fp.glsl  lighting_DBH_vstatic_vp.glsl  lighting_DBS_omni_fp.glsl  lighting_DBS_omni_vp.glsl  lighting_DBS_vstatic_fp.glsl  lighting_DBS_vstatic_vp.glsl  lighting_DB_omni_fp.glsl  lighting_DB_omni_vp.glsl  lighting_DB_vstatic_fp.glsl  lighting_DB_vstatic_vp.glsl  lighting_D_omni_fp.glsl  lighting_D_omni_vp.glsl  lighting_D_proj_fp.glsl  lighting_D_proj_vp.glsl  lighting_D_vstatic_fp.glsl  lighting_D_vstatic_vp.glsl  lighting_RBHS_fp.glsl  lighting_RBHS_vp.glsl  lighting_RBH_fp.glsl  lighting_RBH_vp.glsl  lighting_RBS_fp.glsl  lighting_RBS_vp.glsl  lighting_RB_fp.glsl  lighting_RB_vp.glsl  lighting_R_fp.glsl  (+11 more)
qrazor-fx3/data/xreal/materials/: Makefile.am  aaduffyTest.mtr  andy.mtr  base_light.mtr  base_wall.mtr  dbb.mtr  debug.mtr  decals.mtr  fraglab.mtr  gfx.mtr  glass.mtr  hell.mtr  invisible.mtr  kentest.mtr  ktest.mtr  lights.mtr  mapobjects.mtr  patd.mtr  patricktest.mtr  q2_base.mtr  q2_decals.mtr  q2_lights.mtr  q2_models.mtr  q2_skies.mtr  senetemp.mtr  sfx.mtr  shaderDemo.mtr  shaderlab_skies.mtr  shaderlab_wall.mtr  shaderlist.txt  skies.mtr  sound.mtr  tim.mtr  tr3b.mtr  vb_maya.mtr  vb_skies.mtr  video.mtr  vp_materials.mtr  weapons.mtr  z13d3dm1.mtr  (+1 more)
qrazor-fx3/data/xreal/sound/: Makefile.am  world.sshader
qrazor-fx3/src/: Makefile.am  QRazorFX.dsp  QRazorFX.dsw  XreaL.dsp  cl_cgame.cxx  cl_console.cxx  cl_console.h  cl_input.cxx  cl_keys.cxx  cl_keys.h  cl_local.h  cl_main.cxx  cl_netchan.cxx  cl_null.cxx  cl_parse.cxx  cl_screen.cxx  cl_screen.h  cl_ui.cxx  cm.h  cm_ase.cxx  cm_ase.h  cm_bsp.cxx  cm_d3.cxx  cm_lwo.cxx  cm_lwo.h  cm_main.cxx  cm_md3.cxx  cm_md3.h  cm_md5anim.cxx  cm_md5anim.h  cm_md5mesh.cxx  cm_old.cxx  cmd.cxx  cmd.h  common.cxx  common.h  cvar.cxx  cvar.h  files.h  glimp_glx.cxx  (+133 more)
qrazor-fx3/src/ode/: array.cxx  array.h  collision.h  collision_kernel.cxx  collision_kernel.h  collision_quadtreespace.cxx  collision_space.cxx  collision_space.h  collision_space_internal.h  collision_std.cxx  collision_std.h  collision_transform.cxx  collision_transform.h  collision_util.cxx  collision_util.h  common.h  config.h  contact.h  error.cxx  error.h  fast_dot.cxx  fast_ldlt.cxx  fast_lsolve.cxx  fast_ltsolve.cxx  joint.cxx  joint.h  lcp.cxx  lcp.h  mass.cxx  mass.h  mat.cxx  mat.h  matrix.cxx  matrix.h  memory.cxx  memory.h  misc.cxx  misc.h  object.h  objects.h  (+18 more)
qrazor-fx3/src/shared/: Makefile.am  x_math.cxx  x_math.h  x_message.cxx  x_ode.h  x_panim.cxx  x_pmove.cxx  x_protocol.h  x_shared.h  x_string.cxx
qrazor-fx3/src/xreal/: CGame.def  Makefile.am  XreaL_CGame.dsp  XreaL_Game.dsp  XreaL_UI.dsp  bg_local.h  bg_physics.cxx  bg_physics.h  bg_pmove.cxx  bg_public.h  cg_decal.cxx  cg_entity.cxx  cg_event.cxx  cg_explosion.cxx  cg_hud.cxx  cg_inv.cxx  cg_light.cxx  cg_local.h  cg_main.cxx  cg_muzzleflash.cxx  cg_particle.cxx  cg_physics.cxx  cg_player.cxx  cg_pred.cxx  cg_public.h  cg_screen.cxx  cg_syscalls.cxx  cg_tent.cxx  cg_view.cxx  cg_weapon.cxx  g_camera.cxx  g_camera.h  g_coldet.cxx  g_combat.cxx  g_debris.cxx  g_debris.h  g_entity.cxx  g_entity.h  g_field.cxx  g_field.h  (+54 more)
xreal/: .indent.pro  CHANGELOG.txt  CODINGSTYLE.txt  CONTRIBUTORS.txt  COPYING.txt  ChangeLog  FEATURES.txt  Makefile  README.txt  SConscript_base_cgame  SConscript_base_cgamellvm  SConscript_base_game  SConscript_base_gamellvm  SConscript_base_ui  SConscript_base_uillvm  SConscript_baseta_cgame  SConscript_baseta_game  SConscript_baseta_ui  SConscript_bspc  SConscript_cgame  SConscript_game  SConscript_glsl  SConscript_gtkradiant  SConscript_q3a_cgame  SConscript_q3a_game  SConscript_q3a_ui  SConscript_q3map  SConscript_quake3  SConscript_quake3-server  SConscript_rendererGL  SConscript_scripts  SConscript_ta_cgame  SConscript_ta_game  SConscript_ta_ui  SConscript_tremulous_cgame  SConscript_tremulous_game  SConscript_tremulous_ui  SConscript_ui  SConscript_xmap  SConscript_xmap2  (+21 more)
(+2791 files in other folders)
