
noinst_LIBRARIES = libshared.a

libshared_a_SOURCES =	x_endian.cxx \
			x_info.cxx \
			x_math.cxx \
			x_message.cxx \
			x_panim.cxx \
			x_pmove.cxx \
			x_shared.cxx \
			x_string.cxx

libshared_a_CXXFLAGS = -pipe @WARN_CXXFLAGS@ @OPT_CXXFLAGS@ @SIMD_CXXFLAGS@ @PROFILE_CXXFLAGS@
libshared_a_LIBADD =

noinst_HEADERS =	x_anorms.h \
			x_keycodes.h \
			x_math.h \
			x_message.h \
			x_ode.h \
			x_panim.h \
			x_protocol.h \
			x_shared.h
