# $Id$

pkgdatadir=$(datadir)/@PACKAGE@/xreal/cg

dist_pkgdata_DATA =	generic_arbvp1.cg \
			generic_arbvp1.s \
			generic_arbfp1.cg \
			generic_arbfp1.s \
			\
			generic_vp30.cg \
			generic_vp30.s \
			generic_fp30.cg \
			generic_fp30.s \
			\
			zfill_arbvp1.cg \
			zfill_arbvp1.s \
			zfill_arbfp1.cg \
			zfill_arbfp1.s \
			\
			zfill_vp30.cg \
			zfill_vp30.s \
			zfill_fp30.cg \
			zfill_fp30.s \
			\
			lighting_R_arbvp1.cg \
			lighting_R_arbvp1.s \
			lighting_R_arbfp1.cg \
			lighting_R_arbfp1.s \
			\
			lighting_R_vp30.cg \
			lighting_R_vp30.s \
			lighting_R_fp30.cg \
			lighting_R_fp30.s \
			\
			lighting_RB_arbvp1.cg \
			lighting_RB_arbvp1.s \
			lighting_RB_arbfp1.cg \
			lighting_RB_arbfp1.s \
			\
			lighting_RB_vp30.cg \
			lighting_RB_vp30.s \
			lighting_RB_fp30.cg \
			lighting_RB_fp30.s \
			\
			lighting_RBH_arbvp1.cg \
			lighting_RBH_arbvp1.s \
			lighting_RBH_arbfp1.cg \
			lighting_RBH_arbfp1.s \
			\
			lighting_RBH_vp30.cg \
			lighting_RBH_vp30.s \
			lighting_RBH_fp30.cg \
			lighting_RBH_fp30.s \
			\
			lighting_RBHS_arbvp1.cg \
			lighting_RBHS_arbvp1.s \
			lighting_RBHS_arbfp1.cg \
			lighting_RBHS_arbfp1.s \
			\
			lighting_RBHS_vp30.cg \
			lighting_RBHS_vp30.s \
			lighting_RBHS_fp30.cg \
			lighting_RBHS_fp30.s \
			\
			lighting_RBS_arbvp1.cg \
			lighting_RBS_arbvp1.s \
			lighting_RBS_arbfp1.cg \
			lighting_RBS_arbfp1.s \
			\
			lighting_RBS_vp30.cg \
			lighting_RBS_vp30.s \
			lighting_RBS_fp30.cg \
			lighting_RBS_fp30.s \
			\
			lighting_D_XY_Z_CUBE_arbvp1.cg \
			lighting_D_XY_Z_CUBE_arbvp1.s \
			lighting_D_XY_Z_CUBE_arbfp1.cg \
			lighting_D_XY_Z_CUBE_arbfp1.s \
			\
			lighting_D_XY_Z_CUBE_vp30.cg \
			lighting_D_XY_Z_CUBE_vp30.s \
			lighting_D_XY_Z_CUBE_fp30.cg \
			lighting_D_XY_Z_CUBE_fp30.s \
			\
			lighting_D_XY_Z_proj_arbvp1.cg \
			lighting_D_XY_Z_proj_arbvp1.s \
			lighting_D_XY_Z_proj_arbfp1.cg \
			lighting_D_XY_Z_proj_arbfp1.s \
			\
			lighting_DB_XY_Z_CUBE_arbvp1.cg \
			lighting_DB_XY_Z_CUBE_arbvp1.s \
			lighting_DB_XY_Z_CUBE_arbfp1.cg \
			lighting_DB_XY_Z_CUBE_arbfp1.s \
			\
			lighting_DB_XY_Z_CUBE_vp30.cg \
			lighting_DB_XY_Z_CUBE_vp30.s \
			lighting_DB_XY_Z_CUBE_fp30.cg \
			lighting_DB_XY_Z_CUBE_fp30.s \
			\
			lighting_DBH_XY_Z_CUBE_arbvp1.cg \
			lighting_DBH_XY_Z_CUBE_arbvp1.s \
			lighting_DBH_XY_Z_CUBE_arbfp1.cg \
			lighting_DBH_XY_Z_CUBE_arbfp1.s \
			\
			lighting_DBH_XY_Z_CUBE_vp30.cg \
			lighting_DBH_XY_Z_CUBE_vp30.s \
			lighting_DBH_XY_Z_CUBE_fp30.cg \
			lighting_DBH_XY_Z_CUBE_fp30.s \
			\
			lighting_DBHS_XY_Z_CUBE_arbvp1.cg \
			lighting_DBHS_XY_Z_CUBE_arbvp1.s \
			lighting_DBHS_XY_Z_CUBE_arbfp1.cg \
			lighting_DBHS_XY_Z_CUBE_arbfp1.s \
			\
			lighting_DBHS_XY_Z_CUBE_vp30.cg \
			lighting_DBHS_XY_Z_CUBE_vp30.s \
			lighting_DBHS_XY_Z_CUBE_fp30.cg \
			lighting_DBHS_XY_Z_CUBE_fp30.s \
			\
			lighting_DBS_XY_Z_CUBE_arbvp1.cg \
			lighting_DBS_XY_Z_CUBE_arbvp1.s \
			lighting_DBS_XY_Z_CUBE_arbfp1.cg \
			lighting_DBS_XY_Z_CUBE_arbfp1.s \
			\
			lighting_DBS_XY_Z_CUBE_vp30.cg \
			lighting_DBS_XY_Z_CUBE_vp30.s \
			lighting_DBS_XY_Z_CUBE_fp30.cg \
			lighting_DBS_XY_Z_CUBE_fp30.s \
			\
			reflection_C_arbvp1.cg \
			reflection_C_arbvp1.s \
			reflection_C_arbfp1.cg \
			reflection_C_arbfp1.s \
			\
			reflection_C_vp30.cg \
			reflection_C_vp30.s \
			reflection_C_fp30.cg \
			reflection_C_fp30.s \
			\
			refraction_C_arbvp1.cg \
			refraction_C_arbvp1.s \
			refraction_C_arbfp1.cg \
			refraction_C_arbfp1.s \
			\
			refraction_C_vp30.cg \
			refraction_C_vp30.s \
			refraction_C_fp30.cg \
			refraction_C_fp30.s \
			\
			dispersion_C_arbvp1.cg \
			dispersion_C_arbvp1.s \
			dispersion_C_arbfp1.cg \
			dispersion_C_arbfp1.s \
			\
			dispersion_C_vp30.cg \
			dispersion_C_vp30.s \
			dispersion_C_fp30.cg \
			dispersion_C_fp30.s
			
EXTRA_DIST = 	buildshaders.sh

