# $Id$

pkgdatadir=$(datadir)/@PACKAGE@/xreal/glsl

dist_pkgdata_DATA =	generic_vp.glsl \
			generic_fp.glsl \
			\
			zfill_vp.glsl \
			zfill_fp.glsl \
			\
			lighting_R_vp.glsl \
			lighting_R_fp.glsl \
			\
			lighting_RB_vp.glsl \
			lighting_RB_fp.glsl \
			\
			lighting_RBH_vp.glsl \
			lighting_RBH_fp.glsl \
			\
			lighting_RBHS_vp.glsl \
			lighting_RBHS_fp.glsl \
			\
			lighting_RBS_vp.glsl \
			lighting_RBS_fp.glsl \
			\
			lighting_D_omni_vp.glsl \
			lighting_D_omni_fp.glsl \
			\
			lighting_D_proj_vp.glsl \
			lighting_D_proj_fp.glsl \
			\
			lighting_DB_omni_vp.glsl \
			lighting_DB_omni_fp.glsl \
			\
			lighting_DBH_omni_vp.glsl \
			lighting_DBH_omni_fp.glsl \
			\
			lighting_DBHS_omni_vp.glsl \
			lighting_DBHS_omni_fp.glsl \
			\
			lighting_DBS_omni_vp.glsl \
			lighting_DBS_omni_fp.glsl \
			\
			reflection_C_vp.glsl \
			reflection_C_fp.glsl \
			\
			refraction_C_vp.glsl \
			refraction_C_fp.glsl \
			\
			dispersion_C_vp.glsl \
			dispersion_C_fp.glsl \
			\
			liquid_C_vp.glsl \
			liquid_C_fp.glsl
			
			
			

