# $Id$

pkgdatadir=$(datadir)/@PACKAGE@/xreal/materials

dist_pkgdata_DATA =	aaduffyTest.mtr \
			alphalabs.mtr \
			andy.mtr \
			atest.mtr \
			base_door.mtr \
			base_floor.mtr \
			base_light.mtr \
			base_trim.mtr \
			base_wall.mtr \
			caves.mtr \
			characters.mtr \
			char_common.mtr \
			decals.mtr \
			door.mtr \
			duffyTest.mtr \
			fogs.mtr \
			gfx.mtr \
			glass.mtr \
			hell.mtr \
			invisible.mtr \
			jerry.mtr \
			kentest.mtr \
			ktest.mtr \
			lab_floor.mtr \
			lab.mtr \
			lights.mtr \
			mal.mtr \
			mapobjects.mtr \
			Maxtextures.mtr \
			monsters.mtr \
			morgue.mtr \
			mp_gui.mtr \
			mp_lights.mtr \
			mre.mtr \
			object.mtr \
			outside.mtr \
			patd.mtr \
			patricktest.mtr \
			pdtest.mtr \
			phook.mtr \
			recyc_door.mtr \
			recyc_floor.mtr \
			recyc_light.mtr \
			recyc_trim.mtr \
			recyc_wall.mtr \
			rock.mtr \
			senetemp.mtr \
			sfx.mtr \
			sfx_multiplayer.mtr \
			shaderDemo.mtr \
			skies.mtr \
			sound.mtr \
			specialcase.mtr \
			stevetest.mtr \
			stone.mtr \
			testInteractions.mtr \
			tim.mtr \
			tools.mtr \
			vehicles.mtr \
			video.mtr \
			vp_materials.mtr \
			washroom.mtr \
			weapons.mtr \
			zgraeme.mtr \
			\
			shaderlist.txt           
                 
                       
                      
              
